--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+    "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
     "organizeImports": {
         "enabled": true
     },
@@ -26,13 +26,20 @@
                 "noForEach": "off"
             },
             "correctness": {
-                "noNodejsModules": "off"
+                "noNodejsModules": "off",
+                "useImportExtensions": "off"
             },
             "suspicious": {
-                "noConsoleLog": "warn"
+                "noConsole": {
+                    "level": "warn",
+                    "options": {
+                        "allow": ["info", "warn", "error"]
+                    }
+                }
             },
             "style": {
-                "noDefaultExport": "off"
+                "noDefaultExport": "off",
+                "useExplicitLengthCheck": "off"
             }
         }
     },
