chore: bun env interface merging

--- a/biome.json
+++ b/biome.json
@@ -60,6 +60,16 @@
                     }
                 }
             }
+        },
+        {
+            "include": ["./bun.d.ts"],
+            "linter": {
+                "rules": {
+                    "style": {
+                        "useNamingConvention": "off"
+                    }
+                }
+            }
         }
     ]
 }
