--- a/biome.json
+++ b/biome.json
@@ -62,6 +62,16 @@
             }
         },
         {
+            "include": ["./src/utils/buildResponse.ts"],
+            "linter": {
+                "rules": {
+                    "style": {
+                        "useNamingConvention": "off"
+                    }
+                }
+            }
+        },
+        {
             "include": ["./bun.d.ts"],
             "linter": {
                 "rules": {
